workloads/routing/rabbitmq/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-vs
  namespace: istio-system
spec:
  hosts:
  - rabbitmq.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: eco2-rabbitmq.rabbitmq.svc.cluster.local
        port:
          number: 15672
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: connect-failure,reset,503
